force-app/main/default/objects/SMS_Sondeos__mdt/SMS_Sondeos__mdt.object-meta.xml
<CustomObject>
    <label>SMS Sondeos Settings</label>
    <pluralLabel>SMS Sondeos Settings</pluralLabel>
</CustomObject>