force-app/main/default/objects/SMS_Sondeos__mdt/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Numero</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>