force-app/main/default/objects/SMS_Sondeos__mdt/fields/Operacion__c.field-meta.xml
<CustomField>
    <fullName>Operacion__c</fullName>
    <label>Operacion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>