force-app/main/default/objects/SMS_Sondeos__mdt/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <label>Provision</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>