force-app/main/default/objects/SMS_Sondeos__mdt/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>